<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CWBay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_conf_password">Confirm password</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_sign_up">Create account</string>
    <string name="net_err">Network error</string>
    <string name="login_cred_empty">Email and/or password empty</string>
    <string name="login_invalid_cred">Invalid email and/or password</string>
    <string name="email_is_not_available">Email is not available</string>
    <string name="title_activity_profile_update">Profile</string>
    <string name="btn_profile_up">Update profile</string>
    <string name="btn_change_password">Change password</string>
    <string name="profileUpdateLocation">Your location</string>
    <string name="btn_update_profile">Update Profile</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find a product</item>
        <item>Your Product</item>
        <item>Recent product</item>
        <item>Category</item>
        <item>Explore strange</item>
    </string-array>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items_category">
        <item>Mobiles &amp; Tablets</item>
        <item>Electronics &amp; Computers</item>
        <item>Vehicles</item>
        <item>Home &amp; Furniture</item>
        <item>Pets</item>
        <item>Books, CDs &amp; Hobbies</item>
        <item>Clothing &amp; Accessories</item>
        <item>Kids &amp; Baby</item>
        <item>Sports &amp; Health</item>
        <item>Services</item>
        <item>Jobs</item>
        <item>Real Estate</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
    </array>

    <array name="nav_drawer_icons_category">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_web_apiworkbench">WebAPIWorkbenchActivity</string>

</resources>
