<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical" >

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpProgressBar"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/signUpFullName"
        android:hint="@string/hint_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>

    <EditText
        android:id="@+id/signUpEmail"
        android:hint="@string/hint_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress">
            <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/signUpPhone"
        android:hint="@string/hint_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone">
    </EditText>

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signUpConfPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_conf_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signUpCreate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_up"
        android:layout_marginBottom="60dp" />
    
</LinearLayout>